--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,22 @@
-[build-system]
-requires = [
-    "setuptools>=61.0",
-]
-build-backend = "setuptools.build_meta"
-
-authors = [
-  { name="Ugur Sahin", email="ugorsahin@tutanota.de"},
-]
-
-[project]
+[tool.poetry]
 name = "chatgpt_automation"
-description = "A Headless Chrome interface to communicate with ChatGPT"
+version = "0.1.0"
+description = ""
+authors = ["Hai Dang <hopthucuahaidang@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.8"
-version = "0.1.5"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent",
-]
 
-dependencies = [
-   'selenium>=4.7.2',
-   'undetected-chromedriver>=3.4.6'
-]
+[tool.poetry.dependencies]
+python = "^3.11"
+undetected-chromedriver = "^3.5.3"
+ichrome = "^3.2.0"
+selenium = "^4.13.0"
+chatgptpy = "^1.0.8"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 
 [project.urls]
-Source = "https://github.com/ugorsahin/ChatGPT_Automation"
+Source = "https://github.com/haidang/ChatGPT_Automation"
